--- a/css/override.css
+++ b/css/override.css
@@ -25,7 +25,7 @@ header{
 
 .nav-item {
 	color: white !important;
-	font-size: 1.2rem;
+	font-size: .9rem;
 }
 
 .nav-item:hover{
@@ -34,8 +34,8 @@ header{
 
 .navbar-brand {
 	color: white !important;
-	font-size: 1.2rem;
-	line-height: 98%;
+	font-size: .9rem;
+	line-height: 100%;
 	margin-left: 5%;
 }
 
