--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -122,6 +122,7 @@ a:hover{
 }
 
 .project-title {
+	margin-top: 6rem;
 	font-family: 'Libre Franklin', sans-serif;
 	font-size: 2rem;
 	font-weight: 700;
@@ -215,6 +216,7 @@ footer{
 		object-fit: cover;
 	}
 	.project-title{
+		margin-top: 0rem;
 		font-size: 1.5rem;
 	}
 	.project-body{
@@ -252,6 +254,7 @@ footer{
 		height: auto;
 	}
 	.project-title{
+		margin-top: 0rem;
 		font-size: 1.5rem;
 	}
 	.project-body{
