--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,25 @@ body {
 	font-family: 'Source Code Pro', monospace;
 }
 
+.button {
+  background-color: #ebe3d8;
+  border: .5px solid #e2601e;
+  color: #e2601e;
+  text-align: center;
+  font-size: .9rem;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 3%;
+  margin-bottom: 6%;
+}
+
+.button:hover{
+  background-color: #e2601e;
+  border: .5px solid #e2601e;
+  color: #ebe3d8;
+  transition: .3s;
+}
+
 .navbar-collapse{
 	margin-left: 5%;
 }
@@ -81,12 +100,7 @@ body {
 .last-box{
 	border-bottom: .1px solid black;
 }
-/*
-.box:hover > img{
-	filter: invert(100%);
-	transition: .3s;
-}
-*/
+
 
 .project-body {
 	width: 510px;
@@ -113,6 +127,7 @@ a{
 a:hover{
 	text-decoration: none;
 	color: #e2601e;
+	transition: .3s;
 }
 .project-no {
 	padding-top: 20px;
@@ -130,13 +145,17 @@ a:hover{
 	color: black;
 }
 
+.case-study{
+	font-size: .9rem;
+}
+
 .project-info:hover > h1{
 	color: #e2601e;
-	transition: .3s;f
+	transition: .3s;
 }
 
 .project-categories {
-	padding-top: 40px;
+	padding-top: 2%;
 	font-size: .7rem;
 	color: #007bff !important;
 }
@@ -144,11 +163,7 @@ a:hover{
 .project-categories:hover {
 	color: #007bff !important;
 }
-/*
-button {
-	margin-top: 20px;
-}
-*/
+
 .project-body {
 	max-width: 430px;
 	font-weight: 300;
@@ -249,7 +264,7 @@ footer{
 		width: 90%;
 	}
 	img{
-		max-width: 495px;
+		max-width: 450px;
 		width: auto;
 		height: auto;
 	}
@@ -264,11 +279,11 @@ footer{
 		padding-top: 10px;
 	}
 	.project-categories{
-		padding-top: 1%;
+		padding-top: 0%;
 	}
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 870px) {
 	th{
 		font-size: 3vw;
 	}
@@ -279,6 +294,7 @@ footer{
 		max-height: 500px;
 		width:90%;
 		height: auto;
+		align-items: center;
 	}
 	img{
 		height: auto;
@@ -301,7 +317,16 @@ footer{
 	.about-title{
 		text-align: center;
 	}
-@media screen and (max-width: 479px) {
+	.box {
+	border-top: none;
+	height: auto;
+}
+
+.last-box{
+	border-bottom: none;
+	}
+
+@media screen and (max-width: 479px){
 	th{
 		font-size: 3vw;
 	}
@@ -309,8 +334,7 @@ footer{
 		font-size: 4vw;
 	}
 	.box{
-		max-height: 290px;
-		overflow:hidden
+		max-height: 400px;
 		width:100%;
 	}
 	img{
