--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,8 +11,7 @@ body {
   font-size: .9rem;
   transition: all 0.5s;
   cursor: pointer;
-  margin-top: 3%;
-  margin-bottom: 6%;
+  margin-top: 6%;
 }
 
 .button:hover{
@@ -281,6 +280,9 @@ footer{
 	.project-categories{
 		padding-top: 0%;
 	}
+	.button {
+  	margin-top: 3%;
+	}
 }
 
 @media screen and (max-width: 870px) {
@@ -321,6 +323,10 @@ footer{
 	border-top: none;
 	height: auto;
 }
+
+.button {
+  margin-top: 3%;
+	}
 
 .last-box{
 	border-bottom: none;
