--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -106,10 +106,7 @@ body {
 }
 
 img{
-	width: auto;
-	max-width: 500px;
 	max-height: 500px;
-	height: auto;
 	object-fit: cover;
 }
 
@@ -128,15 +125,16 @@ a:hover{
 	color: #e2601e;
 	transition: .3s;
 }
+
 .project-no {
 	padding-top: 20px;
 	color: #e2601e;
 	font-weight: bold;
-	font-size: .7rem;
+	font-size: .8rem;
 }
 
 .project-title {
-	margin-top: 6rem;
+	margin-top: 3rem;
 	font-family: 'Libre Franklin', sans-serif;
 	font-size: 2rem;
 	font-weight: 700;
@@ -170,6 +168,7 @@ a:hover{
 	padding-top: 20px;
 	color: black !important;
 }
+
 .about-me{
 	margin: 20vh 5% 30vh 5%;
 	display: flex;
@@ -199,9 +198,11 @@ a:hover{
 	position: center;
 	margin: auto;
 }
+
 .linkedin{
 	color:#007bff; 
 }
+
 footer{
 	background-color: black;
 	color: white;
@@ -224,13 +225,13 @@ footer{
 		width: 90%;	
 	}
 	img{
-		max-width: 550px;
+		max-height: 400px;
 		width: auto;
 		height: auto;
 		object-fit: cover;
 	}
 	.project-title{
-		margin-top: 0rem;
+		margin-top: 1rem;
 		font-size: 1.5rem;
 	}
 	.project-body{
