--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -223,10 +223,13 @@ footer{
 		width: 90%;	
 	}
 	img{
-		max-height: 400px;
+		max-height: 345px;
 		width: auto;
 		height: auto;
 		object-fit: cover;
+	}
+	.project-info{
+		padding-bottom: 40px;
 	}
 	.project-title{
 		margin-top: 1rem;
